--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   garage-api:
-    build: .
+    image: liorelb/x-garage-api
     environment:
       GARAGE_MONGO_HOST: mongo
       GARAGE_MONGO_PORT: 27017
